Fixind sidebar on mobile layout

--- a/style.less
+++ b/style.less
@@ -1091,7 +1091,8 @@ text-transform: uppercase;
     }
 
     #primary-sidebar {
-        margin-left: -15px;
+        padding: 15px;
+        margin-left: 0;
     }
 
     article.blogroll {
@@ -1132,11 +1133,6 @@ text-transform: uppercase;
     .sidebar {
         padding-top: 0;
         padding-bottom: 0;
-    }
-
-    #primary-sidebar {
-        padding: 15px;
-        margin-left: 0;
     }
 
     .hero-intro h2 {
